--- a/style.css
+++ b/style.css
@@ -1,61 +1,194 @@
 html {
     font-family: 'Lato', sans-serif;
-    
+    height: 100%;
+    width: 100%;
+    font-size: 1rem;
 }
 
-.bordure{
-border:ridge;
-padding: 100px 100px 30px 30px;
+
+@media screen and (max-width: 1800px) {
+    .bordure {
+        border: ridge;
+
+    }
+
+    .column2 {
+        padding: 50px 50px 30px 30px;
+        text-align: center;
+    }
+
+    h2 {
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        font-size: x-large;
+    }
+
+    canvas {
+        font-family: 'Lato', sans-serif;
+
+    }
+
+
 }
 
-.column2{
-padding: 50px 50px 30px 30px;
-text-align: center;
-}
-
-h2{
+.marginTop {
     text-align: center;
-    font-family: 'Lato', sans-serif;
-    font-size: xx-large;
+    padding-top: 10vh;
 }
 
-canvas {
-    font-family: 'Lato', sans-serif;
-    
-}
-
-.encadre{
+.marginTop2 {
     text-align: center;
-    font-family: 'Lato', sans-serif;
-    
-    border-style: inset;
-    background-color: #00FF00;width: 50px;
-}
-.marginTop{
-    text-align:center;
-    padding-top: 100px;
+    padding-top: 5vh;
+    font-size: small;
+
 }
 
-.marginTop2{
-    text-align:center;
-    padding-top: 10px;
-    font-size:x-large;
+.marginBottom {
+    padding-top: 5vh;
+    text-align: center;
+    padding-bottom: 10vh;
+
 }
 
-.marginBottom{
-    padding-top: 10px;
-    text-align:center;
-    padding-bottom: 50px;
-   
-}
-    
-.borderCurrent{
-    padding-top: 10px;
+.borderCurrent {
+    padding-top: 2vh 10vw;
     font-family: 'Lato', sans-serif;
     border: 5px;
     border-style: inset;
-    background-color: #00FF00;}
+    background-color: #bd1545;
+}
 
-    .columnBackground{
-        background-color: aquamarine;
+.columnBackground {
+    background-color: aquamarine;
+    border: solid
+}
+
+.modifColorPlayerSet{
+    color:red;
+}
+
+.modifColorPlayerUnSet{
+    color:black;
+}
+
+
+
+@media screen and (max-width: 576px) {
+    .bordure {
+        border: ridge;
+        padding: 2vh 2vh 2vh 2vh;
+        orientation: initial
     }
+
+    .column2 {
+        padding: 15px 15px 10px 10px;
+        text-align: center;
+
+    }
+
+    h2 {
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        font-size: 1.5em;
+    }
+
+    canvas {
+        font-family: 'Lato', sans-serif;
+
+    }
+
+    .marginTop {
+        text-align: center;
+        padding-top: 10vh;
+    }
+
+    .marginTop2 {
+        text-align: center;
+        padding-top: 5vh;
+        font-size: 1.5em;
+
+    }
+
+    .marginBottom {
+        padding-top: 5vh;
+        text-align: center;
+        padding-bottom: 10vh;
+        font-size: 1.5em;
+
+    }
+
+    .borderCurrent {
+        font-size: 1em;
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        border: 10px;
+        border-style: ridge;
+        background-color: #959e2e;
+    }
+
+    .columnBackground {
+        background-color: cadetblue;
+        border: solid;
+    }
+}
+
+
+
+@media screen and (max-width: 464px) {
+    .bordure {
+        border: ridge;
+        padding: 2vh 2vh 2vh 2vh;
+        orientation: initial
+    }
+
+    .column2 {
+        padding: 15px 15px 10px 10px;
+        text-align: center;
+
+    }
+
+    h2 {
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        font-size: 1.5em;
+    }
+
+    canvas {
+        font-family: 'Lato', sans-serif;
+
+    }
+
+
+    .marginTop {
+        text-align: center;
+        padding-top: 10vh;
+    }
+
+    .marginTop2 {
+        text-align: center;
+        padding-top: 5vh;
+        font-size: 1em;
+
+    }
+
+    .marginBottom {
+        text-align: center;
+        padding-bottom: 10vh;
+        font-size: 1em;
+
+    }
+
+    .borderCurrent {
+        font-size: 1em;
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        border: 10px;
+        border-style: ridge;
+        background-color: #0000FF;
+    }
+
+    .columnBackground {
+        background-color: rgb(33, 192, 83);
+        border: solid;
+    }
+}
